--- a/css/scss/stilos.scss
+++ b/css/scss/stilos.scss
@@ -1,13 +1,13 @@
-@import "./partials/variables";
+@import "../partials/variables";
 
-@import "./partials/reset";
+@import "../partials/reset";
 
-@import "./partials/header";
-@import "./partials/footer";
-@import "./partials/contacto";
-@import "./partials/fondo";
-@import "./partials/parrafos";
-@import "./partials/productos";
-@import "./partials/tarjetas";
+@import "../partials/header";
+@import "../partials/footer";
+@import "../partials/contacto";
+@import "../partials/fondo";
+@import "../partials/parrafos";
+@import "../partials/productos";
+@import "../partials/tarjetas";
 
-@import "./partials/media-queries";
+@import "../partials/media-queries";
